@@ -1,1 +1,2 @@
 DIST ovirt-engine-dwh-3.4.0.tar.gz 907064 SHA256 29271b7aee7d59b40d649873330db7395d11d1724c4038e6802581f9183d0fec SHA512 f0b6216c1d1b94f31caf47db0bd39d08e65f3b9c54efcb408a1798c2c80c34c8c0c878b58af62100f6a3a29171bef08e30976f7cbe0a1560c954aabd5b40ff64 WHIRLPOOL c37a34c15cf8d6dba5dda0aa7ee396e8ed6367e35feb4ff66af71c9293f92c727019b060651f92291528f30ca86286e217103edff0b7623cda869af1c23d02f7
+DIST ovirt-engine-dwh-3.4.1.tar.gz 913479 SHA256 b2d9c294e6db2b946f2984eccd0c8ed210a841ec63f2582df3602904db94f06a SHA512 947607de89284a18f6b15f86c5eda8e06f3694a61f10895df018fdcad9c13566e864d57c3e7ab1e6876f6301e0d05fe6a56f4303d156ad27df2ac1bc0c84d2cf WHIRLPOOL a574254833c9f8ccd759e1adf7645160891fb89448e2a1625a8678ff5adf4b338343195d29ef7735f052d74e463f44c095304a95df7266ccca0436db59bef756
