@@ -1,3 +1,8 @@
+*ovirt-engine-dwh-3.4.1 (08 May 2014)
+
+  08 May 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-dwh-3.4.1.ebuild:
+  Version bump
+
 *ovirt-engine-dwh-3.4.0 (27 Mar 2014)
 
   27 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-dwh-3.4.0.ebuild:
